--- a/KanjiRyokucha/CardBackView.xib
+++ b/KanjiRyokucha/CardBackView.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -46,11 +46,11 @@
                             </constraints>
                         </imageView>
                         <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NLb-1T-Akn" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                            <rect key="frame" x="166" y="283.5" width="157" height="49"/>
+                            <rect key="frame" x="166" y="277.5" width="157" height="55"/>
                             <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                             <accessibility key="accessibilityConfiguration" label="no"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="49" id="N1M-8x-THi" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
+                                <constraint firstAttribute="height" constant="55" id="N1M-8x-THi" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="📱3¨5_const">
                                             <real key="value" value="42"/>
@@ -67,11 +67,11 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R3e-L7-iyw" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                            <rect key="frame" x="166" y="202.5" width="157" height="49"/>
+                            <rect key="frame" x="166" y="202.5" width="157" height="55"/>
                             <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                             <accessibility key="accessibilityConfiguration" label="yes"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="49" id="356-gS-WbP" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
+                                <constraint firstAttribute="height" constant="55" id="356-gS-WbP" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
                                     <userDefinedRuntimeAttributes>
                                         <userDefinedRuntimeAttribute type="number" keyPath="📱3¨5_const">
                                             <real key="value" value="42"/>
@@ -87,14 +87,15 @@
                                 <action selector="buttonTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="nLj-BX-lQ8"/>
                             </connections>
                         </button>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="top" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="SJc-5n-7rS">
-                            <rect key="frame" x="8" y="362.5" width="315" height="29"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="SJc-5n-7rS">
+                            <rect key="frame" x="8" y="362.5" width="315" height="44"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EOh-Ve-UCv" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="50" height="29"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="44"/>
                                     <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="50" id="Nzd-kr-Nkh"/>
+                                        <constraint firstAttribute="height" constant="44" id="tJz-ya-bc5"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <state key="normal" title="easy">
@@ -105,8 +106,11 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ovc-78-r7W" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                                    <rect key="frame" x="80.5" y="0.0" width="50" height="29"/>
+                                    <rect key="frame" x="80.5" y="0.0" width="50" height="44"/>
                                     <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="44" id="1fe-NF-DAh"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <state key="normal" title="hard">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -116,9 +120,10 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VNk-RQ-8Gc" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                                    <rect key="frame" x="160.5" y="0.0" width="74" height="29"/>
+                                    <rect key="frame" x="160.5" y="4.5" width="74" height="35"/>
                                     <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
+                                        <constraint firstAttribute="height" constant="35" id="RFs-Wj-SjL"/>
                                         <constraint firstAttribute="width" constant="74" id="Y1p-xI-hNE"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -128,10 +133,11 @@
                                     </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="U9V-En-UcJ" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                                    <rect key="frame" x="265" y="0.0" width="50" height="29"/>
+                                    <rect key="frame" x="265" y="0.0" width="50" height="44"/>
                                     <color key="backgroundColor" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="50" id="50p-su-Yya"/>
+                                        <constraint firstAttribute="height" constant="44" id="A0e-kG-Xbh"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <state key="normal" title="quit"/>
