--- a/KanjiRyokucha/FreeReviewViewController.xib
+++ b/KanjiRyokucha/FreeReviewViewController.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="ipad9_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="activityIndicator" destination="TmK-QP-d36" id="OU4-OE-UCw"/>
                 <outlet property="errorMessage" destination="2FD-ow-BOk" id="mAs-na-aUv"/>
+                <outlet property="formView" destination="zzE-yp-V7A" id="aEZ-G6-aHG"/>
                 <outlet property="fromField" destination="wc4-v9-IZc" id="vLB-Da-aLt"/>
                 <outlet property="reviewContainer" destination="rY2-90-vkr" id="cOU-ka-R3N"/>
                 <outlet property="shuffleSwitch" destination="fWf-Nr-qzi" id="fH7-SL-Fdf"/>
@@ -23,30 +24,30 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zzE-yp-V7A">
-                    <rect key="frame" x="8" y="70" width="359" height="350"/>
+                    <rect key="frame" x="8" y="70" width="752" height="350"/>
                     <subviews>
                         <activityIndicatorView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="TmK-QP-d36">
-                            <rect key="frame" x="169" y="300" width="20" height="20"/>
+                            <rect key="frame" x="365.5" y="300" width="20" height="20"/>
                             <color key="color" red="0.53333333329999999" green="0.70196078429999997" blue="0.098039215690000001" alpha="1" colorSpace="calibratedRGB"/>
                         </activityIndicatorView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Free review" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NwE-7D-NWt">
-                            <rect key="frame" x="119" y="8" width="122" height="29"/>
+                            <rect key="frame" x="315.5" y="8" width="122" height="29"/>
                             <fontDescription key="fontDescription" type="system" pointSize="24"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter a range of kanji" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n65-dd-nuI">
-                            <rect key="frame" x="99" y="57" width="161" height="20.5"/>
+                            <rect key="frame" x="295.5" y="57" width="161" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="from index" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wc4-v9-IZc">
-                            <rect key="frame" x="110" y="85.5" width="140" height="40"/>
+                            <rect key="frame" x="306.5" y="85.5" width="140" height="40"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="40" id="FGj-gg-8R3" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
                                     <userDefinedRuntimeAttributes>
@@ -62,13 +63,13 @@
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="to index" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BAZ-ys-hlm">
-                            <rect key="frame" x="110" y="133.5" width="140" height="40"/>
+                            <rect key="frame" x="306.5" y="133.5" width="140" height="40"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fbM-Sz-7fp">
-                            <rect key="frame" x="105" y="188.5" width="150" height="30"/>
+                            <rect key="frame" x="301.5" y="188.5" width="150" height="30"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="shuffle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQt-O2-TwL">
                                     <rect key="frame" x="0.0" y="0.0" width="101" height="30"/>
@@ -87,7 +88,7 @@
                             </constraints>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yd8-05-GZo" customClass="KRButton" customModule="KanjiRyokucha" customModuleProvider="target">
-                            <rect key="frame" x="129" y="238.5" width="102" height="48"/>
+                            <rect key="frame" x="325.5" y="238.5" width="102" height="48"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="48" id="F43-6x-c3S"/>
@@ -96,7 +97,7 @@
                             <state key="normal" title="start"/>
                         </button>
                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="error message" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2FD-ow-BOk">
-                            <rect key="frame" x="20" y="238.5" width="319" height="48"/>
+                            <rect key="frame" x="20" y="238.5" width="712" height="48"/>
                             <color key="backgroundColor" red="1" green="0.82940627760993735" blue="0.69697873232285978" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -146,11 +147,28 @@
                     </constraints>
                 </view>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rY2-90-vkr">
-                    <rect key="frame" x="8" y="70" width="359" height="350"/>
+                    <rect key="frame" x="20" y="337" width="338" height="350"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="350" id="Fjh-0v-6E5"/>
+                        <constraint firstAttribute="width" constant="338" id="u1r-4g-fzi"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Fjh-0v-6E5"/>
+                            <exclude reference="u1r-4g-fzi"/>
+                        </mask>
+                    </variation>
+                    <variation key="widthClass=regular">
+                        <mask key="constraints">
+                            <include reference="Fjh-0v-6E5"/>
+                            <include reference="u1r-4g-fzi"/>
+                        </mask>
+                    </variation>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="rY2-90-vkr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" symbolic="YES" id="9O8-0p-u1b"/>
                 <constraint firstItem="zzE-yp-V7A" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="70" id="EIK-ih-7gQ" customClass="LayoutConstraint" customModule="KanjiRyokucha" customModuleProvider="target">
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="📱3¨5_const">
@@ -159,12 +177,29 @@
                     </userDefinedRuntimeAttributes>
                 </constraint>
                 <constraint firstItem="zzE-yp-V7A" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="GXo-Ps-TD7"/>
+                <constraint firstItem="rY2-90-vkr" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="R58-Bs-RJ0"/>
                 <constraint firstItem="rY2-90-vkr" firstAttribute="leading" secondItem="zzE-yp-V7A" secondAttribute="leading" id="XUn-BY-s5h"/>
                 <constraint firstItem="rY2-90-vkr" firstAttribute="width" secondItem="zzE-yp-V7A" secondAttribute="width" id="iTS-JI-bh6"/>
                 <constraint firstItem="rY2-90-vkr" firstAttribute="height" secondItem="zzE-yp-V7A" secondAttribute="height" id="orx-wP-R9W"/>
                 <constraint firstItem="rY2-90-vkr" firstAttribute="top" secondItem="zzE-yp-V7A" secondAttribute="top" id="sai-IE-e81"/>
                 <constraint firstAttribute="trailing" secondItem="zzE-yp-V7A" secondAttribute="trailing" constant="8" id="uxM-Lf-fBl"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="9O8-0p-u1b"/>
+                    <exclude reference="R58-Bs-RJ0"/>
+                </mask>
+            </variation>
+            <variation key="widthClass=regular">
+                <mask key="constraints">
+                    <include reference="9O8-0p-u1b"/>
+                    <include reference="R58-Bs-RJ0"/>
+                    <exclude reference="XUn-BY-s5h"/>
+                    <exclude reference="iTS-JI-bh6"/>
+                    <exclude reference="orx-wP-R9W"/>
+                    <exclude reference="sai-IE-e81"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="34.5" y="54.5"/>
         </view>
     </objects>
