--- a/KanjiRyokucha/EmptyStudyCell.xib
+++ b/KanjiRyokucha/EmptyStudyCell.xib
@@ -12,15 +12,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="emptyCellId" rowHeight="78" id="KGk-i7-Jjw" customClass="EmptyStudyCell" customModule="KanjiRyokucha" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="78"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="emptyCellId" rowHeight="63" id="KGk-i7-Jjw" customClass="EmptyStudyCell" customModule="KanjiRyokucha" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="63"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="77.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="62.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="no items" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpB-ns-Hal">
-                        <rect key="frame" x="8" y="22" width="304" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="no items" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gpB-ns-Hal">
+                        <rect key="frame" x="8" y="22" width="304" height="18.5"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
@@ -30,12 +30,13 @@
                     <constraint firstItem="gpB-ns-Hal" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="14" id="9M9-Nf-In7"/>
                     <constraint firstAttribute="trailingMargin" secondItem="gpB-ns-Hal" secondAttribute="trailing" id="Fad-uk-91a"/>
                     <constraint firstItem="gpB-ns-Hal" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="a7h-aD-Skc"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="gpB-ns-Hal" secondAttribute="bottom" constant="14" id="x4k-lT-mig"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="label" destination="gpB-ns-Hal" id="i7l-bL-0g8"/>
             </connections>
-            <point key="canvasLocation" x="34" y="71"/>
+            <point key="canvasLocation" x="34" y="63.5"/>
         </tableViewCell>
     </objects>
 </document>
